<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">咕噜校园</string>
    <string name="app_info_welcome">最in的校园生活平台</string>
    <string name="copyright">©一个神奇的工作室</string>
    <string name="grooo_delivery">咕噜外卖</string>
    <string name="grooo_preorder">咕噜预定</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="favorite">收藏</string>
    <string name="login_username_hint">请输入用户名…</string>
    <string name="login_password_hint">请输入密码…</string>
    <string name="login_comfirmpassword_hint">请再次输入密码…</string>
    <string name="login">登录</string>
    <string name="my_order">我的订单</string>
    <string name="suggest_us">调教我们吧</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="message_search_hint">搜索…</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称…</string>
    <string name="add_gender">性别</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    <string name="send_state">已读</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="username">用户名</string>
    <string name="search">搜索</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">附近的人</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="price">7</string>
    <string name="zero">0</string>
    <string name="myaddress">鹏远3号楼</string>
    <string name="myroomnumber">2004号</string>
    <string name="confirmpay">确认</string>
    <string name="clearorder">清空</string>
    <string name="confirmfetch">还不快去</string>
    <string name="confirmregister">确认注册</string>
    <string name="requestcancel">申请退单</string>
    <string name="orderdetail">订单详情</string>
    <string name="callshop">联系商家</string>
    <string name="phonenumber">手机号</string>
    <string name="buildinghint">宿舍楼</string>
    <string name="roomhint">房间号（东秦其他地址在此输入）</string>
    <string name="email">邮箱</string>
    <string name="recallyousoon">RESPONSE SOON!</string>
    <string name="aboutusweb1">不习惯用app?</string>
    <string name="aboutusweb2">去网页版></string>
    <string name="aboutus">关于我们</string>
    <string name="aboutusintroduce">app刚刚制作完成，肯定存在不少bug\n因此大家的意见对我们至关重要\n咕噜团队迫切渴望你的真诚建议\n\n商业合作请联系苏同学：13653351433\n\nPowered by\n\n润之腊肉馆\nAND\nResponsible</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="activitylabel_suggest">吐槽</string>
    <string name="activitylabel_delivery">咕噜快递</string>
    <string name="activitylabel_regist">注册</string>
    <string name="activitylabel_home">咕噜校园</string>

</resources>